--- a/index.html
+++ b/index.html
@@ -8,31 +8,24 @@
 <body>
 <script>
 class MyGame extends Phaser.Scene {
-    constructor() {
-        super();
-    }
+    constructor() { super(); }
 
     preload() {}
 
     create() {
-        // プレイヤー
         this.player = this.add.rectangle(400, 300, 30, 30, 0x00ff00);
         this.physics.add.existing(this.player);
         this.player.body.setCollideWorldBounds(true);
 
-        // キーボード入力
         this.cursors = this.input.keyboard.createCursorKeys();
         this.speed = 200;
 
-        // 敵グループ
         this.enemies = this.physics.add.group();
 
-        // DNAポイント
         this.dna = 0;
         this.level = 1;
         this.nextLevelDNA = 5;
 
-        // 定期的に敵をスポーン
         this.time.addEvent({
             delay: 2000,
             callback: () => {
@@ -45,7 +38,6 @@ class MyGame extends Phaser.Scene {
             loop: true
         });
 
-        // 衝突処理（プレイヤーが敵に触れると敵が消えてDNAゲット）
         this.physics.add.overlap(this.player, this.enemies, (player, enemy) => {
             enemy.destroy();
             this.dna++;
@@ -56,7 +48,6 @@ class MyGame extends Phaser.Scene {
     }
 
     update() {
-        // 移動
         this.player.body.setVelocity(0);
         if (this.cursors.left.isDown) this.player.body.setVelocityX(-this.speed);
         if (this.cursors.right.isDown) this.player.body.setVelocityX(this.speed);
@@ -68,12 +59,8 @@ class MyGame extends Phaser.Scene {
         this.level++;
         this.dna = 0;
         this.nextLevelDNA += 5;
-
-        // 進化演出（とりあえずサイズと色を変える）
         this.player.setScale(1 + this.level * 0.2);
         this.player.fillColor = Phaser.Display.Color.RandomRGB().color;
-
-        // 能力強化（例：スピードアップ）
         this.speed += 20;
     }
 }
